--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,13 @@
-// Place all the styles related to the Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// user-index
+.user-item {
+  height: 320px;
+}
+
+.user-item img {
+  height: 250px;
+}
+
+// user-show
+.user-thum-carousel {
+  
+}
