--- a/app/views/users/_search_form.html.erb
+++ b/app/views/users/_search_form.html.erb
@@ -5,8 +5,8 @@
         <%= form_tag(users_path, method: "get") do %>
           <div class="row">
             <div class="form-group col-md-3">
-              <%= label_tag :last_name, "名前" %>
-              <%= text_field_tag :last_name, "", class: "form-control" %>
+              <%= label_tag :name, "名前" %>
+              <%= text_field_tag :name, "", class: "form-control" %>
             </div>
 
             <div class="form-group col-md-2">
