--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,13 +1,10 @@
-<h1>Password reset</h1>
+<h1>パスワードリセット</h1>
 
-<p>To reset your password click the link below:</p>
+<p>以下のURLをクリックしてパスワードをリセットしてください。</p>
 
 <%= link_to "Reset password", edit_password_reset_url(@user.reset_token,
                                                       email: @user.email) %>
 
-<p>This link will expire in two hours.</p>
+<p>このリンクは２時間で無効になります。</p>
 
-<p>
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
-</p>
+<p>このメールに心当たりがない場合は、メールを削除してください。パスワードは変更されませんのでご安心ください。</p>
