--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,8 +1,8 @@
-To reset your password click the link below:
+以下のURLをクリックしてパスワードをリセットしてください。
 
 <%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
 
-This link will expire in two hours.
+このリンクは２時間で無効になります。
 
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
+このメールに心当たりがない場合は、メールを削除してください。
+パスワードは変更されませんのでご安心ください。
