--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <aside class="col-md-4 col-xs-4">
-    <% if @user.thumbnails.present? %>
+    <% if @user.thumbnails.count > 1 %>
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
