--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -4,9 +4,10 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for([@micropost, @apply]) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
-
-      <%= f.label :memo %>
-      <%= f.text_field :memo, class: 'form-control' %>
+      <div class="form-group">
+        <%= f.label :memo %>
+        <%= f.text_field :memo, class: 'form-control' %>
+      </div>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
