--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,4 +1,45 @@
+<div class="row">
+  <% if current_user.staff == true %>
+    <%= link_to "投稿する", new_micropost_path %>
+  <% end %>
+</div>
 <% @microposts.each do |micropost| %>
- <%= micropost.content %>
- <%= link_to "詳細情報を見る", micropost_path(micropost) %> 
+  <div class="row">
+    <table class="table table-striped table-bordered table-hover table-condensed">
+  		<thead>
+  			<tr class="info">
+  				<th colspan="4">
+            <%= micropost.content %> <%= link_to "詳細情報を見る", micropost_path(micropost) %>
+  				</th>
+  			</tr>
+  		</thead>
+  		<tbody>
+        <tr>
+        <th>登録日</th>
+        <td class=""><%= micropost.created_at_to_date %></td>
+        <td class="">募集終了日</td>
+        <td class="">-</td>
+        </tr>
+        <tr>
+        <th>場所</th>
+        <td class=""><%= micropost.prefecture.name %> <%= micropost.area.name %></td>
+        <td class="">得意スタイル</td>
+        <td class="">-</td>
+        </tr>
+        <tr>
+        <th>投稿者</th>
+        <td class=""><%= micropost.user.name %></td>
+        <td class="">目的</td>
+        <td class=""><%= micropost.reason %></td>
+        </tr>
+        <tr>
+        <th>カラー</th>
+        <td class=""><%= micropost.color %></td>
+        <td class="">エクステ</td>
+        <td class=""><%= micropost.hair_extension %></td>
+        </tr>
+
+      </tbody>
+    </table>
+  </div>
 <% end %>
