--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -5,8 +5,55 @@
     <%= form_for(@micropost) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
-      <%= f.label :content %>
-      <%= f.text_field :content, class: 'form-control' %>
+      <div class="form-group">
+        <%= f.label :content %>
+        <%= f.text_field :content, class: 'form-control' %>
+      </div>
+        <script>
+          $(function() {
+            $('#micropost_prefecture_id').change(function() {
+              var prefecture_id = $("#micropost_prefecture_id").val();
+              if (prefecture_id !== "") {
+                $.get("<%= prefectures_areas_path %>",
+                  { prefecture_id: prefecture_id },
+                  function(data){ }
+                );
+              }
+            });
+          });
+        </script>
+
+        <div class="form-check form-check-inline">
+          <%= f.label :prefecture_id, "都道府県" %>
+          <span class="required">※必須</span>
+          <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {}, class: 'form-control' %>
+        </div>
+
+        <div class="form-check form-check-inline">
+          <%= f.label :area_id, "市区町村" %>
+          <span class="required">※必須</span>
+          <%= f.collection_select :area_id, Area.all, :id, :name, {}, class: 'form-control' %>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-2">
+            <%= f.label :color, "カラー希望" %>
+            <%= f.check_box(:color, {:checked=> false}, "可能", "不可能") %>
+          </div>
+          <div class="form-group col-md-2">
+            <%= f.label :hair_extension, "エクステ希望" %>
+            <%= f.check_box(:hair_extension, {:checked=> false}, "可能", "不可能") %>
+          </div>
+          <div class="form-group col-md-2">
+            <%= f.label :hair_extension, "メンズ希望" %>
+            <%= f.check_box(:hair_extension, {:checked=> false}, "可能", "不可能") %>
+          </div>
+          <div class="form-group col-md-2">
+            <%= f.label :reason, "理由" %>
+            <%= f.radio_button :reason, 0 %>練習
+            <%= f.radio_button :reason, 1 %>練習兼サロンモデル募集
+          </div>
+        </div>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
