--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -38,20 +38,20 @@
         <div class="form-row">
           <div class="form-group col-md-2">
             <%= f.label :color, "カラー希望" %>
-            <%= f.check_box(:color, {:checked=> false}, "可能", "不可能") %>
+            <%= f.check_box(:color, {:checked=> false}, "希望", "なし") %>
           </div>
           <div class="form-group col-md-2">
             <%= f.label :hair_extension, "エクステ希望" %>
-            <%= f.check_box(:hair_extension, {:checked=> false}, "可能", "不可能") %>
+            <%= f.check_box(:hair_extension, {:checked=> false}, "希望", "なし") %>
           </div>
           <div class="form-group col-md-2">
             <%= f.label :hair_extension, "メンズ希望" %>
-            <%= f.check_box(:hair_extension, {:checked=> false}, "可能", "不可能") %>
+            <%= f.check_box(:hair_extension, {:checked=> false}, "希望", "なし") %>
           </div>
           <div class="form-group col-md-2">
             <%= f.label :reason, "理由" %>
-            <%= f.radio_button :reason, 0 %>練習
-            <%= f.radio_button :reason, 1 %>練習兼サロンモデル募集
+            <%= f.radio_button :reason, "練習" %>練習
+            <%= f.radio_button :reason, "練習兼サロンモデル募集" %>練習兼サロンモデル募集
           </div>
         </div>
 
