--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <% if current_user.staff == true %>
+  <% if current_user.present? && current_user.staff == true %>
     <%= link_to "投稿する", new_micropost_path %>
   <% end %>
 </div>
