--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -6,7 +6,7 @@
       <%= render 'shared/error_messages', object: f.object %>
 
       <div class="form-group">
-        <%= f.label :content %>
+        <%= f.label :content, "内容" %>
         <%= f.text_field :content, class: 'form-control' %>
       </div>
         <script>
