--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
-      <%= f.label :name %>
+      <%= f.label :name, "お名前" %>
       <%= f.text_field :name, class: 'form-control' %>
 
       <div class="form-group">
@@ -50,13 +50,13 @@
       </script>
 
       <div class="form-group">
-        <%= f.label :prefecture_id, "住まい" %>
+        <%= f.label :prefecture_id, "都道府県" %>
         <span class="required">※必須</span>
         <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {}, class: "form-control" %>
       </div>
 
       <div class="form-group">
-        <%= f.label :area_id, "住まい" %>
+        <%= f.label :area_id, "市区町村" %>
         <span class="required">※必須</span>
         <%= f.collection_select :area_id, Area.all, :id, :name, {}, class: "form-control" %>
       </div>
@@ -103,15 +103,15 @@
       <% end %>
 
       <div class="form-group">
-        <%= f.label :email %>
+        <%= f.label :email, "メールアドレス" %>
         <%= f.email_field :email, class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= f.label :password %>
+        <%= f.label :password, "パスワード" %>
         <%= f.password_field :password, class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.label :password_confirmation, "パスワード（確認）" %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
       <%= f.submit "変更する", class: "btn btn-primary" %>
