--- a/app/views/users/staff_new.html.erb
+++ b/app/views/users/staff_new.html.erb
@@ -5,7 +5,7 @@
     <%= form_for @user, url: staff_signup_path do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
-      <%= f.label :name %>
+      <%= f.label :name, "お名前" %>
       <%= f.text_field :name, class: 'form-control' %>
 
 
@@ -62,16 +62,16 @@
         <%= f.collection_select :area_id, Area.all, :id, :name, {}, class: 'form-control' %>
       </div>
 
-      <%= f.label :email %>
+      <%= f.label :email, "メールアドレス" %>
       <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.label :password %>
+      <%= f.label :password, "パスワード" %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "パスワード（確認）" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "登録する", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
