--- a/app/views/users/staff_new.html.erb
+++ b/app/views/users/staff_new.html.erb
@@ -5,39 +5,52 @@
     <%= form_for @user, url: staff_signup_path do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
-      <%= f.label :name, "お名前" %>
-      <%= f.text_field :name, class: 'form-control' %>
-
-
-      <div class="form-group">
-        <%= f.label :birth, "生年月日" %>
-        <span class="required">※必須</span>
-        <%= raw sprintf(
-          f.date_select(
-            :birth,
-            {
-              start_year:     Time.zone.now.prev_year.year,
-              end_year:       Time.zone.now.next_year.year,
-              default:        Time.zone.now,
-              use_two_digit_numbers: true,
-              date_separator: '%s'
-            },
-            { class: 'form-control' }
-          ),
-          '年 ', '月 ') + '日'
-        %>
+      <div class="row">
+        <div class="form-group">
+          <%= f.label :name, "お名前/ニックネーム" %>
+          <span class="required">※必須</span>
+          <%= f.text_field :name, class: 'form-control' %>
+        </div>
       </div>
 
-      <div class="form-check form-check-inline">
-        <%= f.label :sex, "性別" %>
-        <span class="required">※必須</span>
-        <%= f.radio_button :sex, "女性" %>女性
-        <%= f.radio_button :sex, "男性" %>男性
+      <div class="row">
+        <div class="form-group">
+          <%= f.label :birth, "生年月日" %>
+          <span class="required">※必須</span>
+          <div class="form-inline">
+            <%= raw sprintf(
+              f.date_select(
+                :birth,
+                {
+                  start_year: 1951,
+                  end_year: Time.zone.now.year,
+                  default: Time.zone.now.ago(25.years),
+                  use_two_digit_numbers: true,
+                  date_separator: '%s'
+                },
+                { class: 'form-control' }
+              ),
+              '年 ', '月 ') + '日'
+            %>
+          </div>
+        </div>
       </div>
-
+      <div class="row">
+        <div class="form-group form-check-inline">
+          <div class="control-label">
+            <%= f.label :sex, "性別" %>
+            <span class="required">※必須</span>
+          </div>
+          <div class="radio-inline">
+            <%= f.radio_button :sex, "女性" %>女性
+          </div>
+          <div class="radio-inline">
+            <%= f.radio_button :sex, "男性" %>男性
+          </div>
+        </div>
+      </div>
       <script>
         $(function() {
-          console.log("start");
           $('#user_prefecture_id').change(function() {
             var prefecture_id = $("#user_prefecture_id").val();
             if (prefecture_id !== "") {
@@ -50,28 +63,58 @@
         });
       </script>
 
-      <div class="form-check form-check-inline">
-        <%= f.label :prefecture_id, "住まい" %>
-        <span class="required">※必須</span>
-        <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {}, class: 'form-control' %>
+      <div class="row">
+        <div class="form-gourp">
+          <%= f.fields_for :thumbnails do |thumbnail| %>
+            <%= thumbnail.file_field :image %>
+          <% end %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="form-group">
+          <%= f.label :prefecture_id, "都道府県" %>
+          <span class="required">※必須</span>
+          <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {selected: 12}, class: 'form-control' %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="form-group">
+          <%= f.label :area_id, "市区町村" %>
+          <span class="required">※必須</span>
+          <%= f.collection_select :area_id, Area.all, :id, :name, {selected: 176}, class: 'form-control' %>
+        </div>
       </div>
 
-      <div class="form-check form-check-inline">
-        <%= f.label :area_id, "住まい" %>
-        <span class="required">※必須</span>
-        <%= f.collection_select :area_id, Area.all, :id, :name, {}, class: 'form-control' %>
+      <div class="row">
+        <div class="form-gourp">
+          <div class="control-label">
+            <%= f.label :email, "メールアドレス" %>
+            <span class="required">※必須</span>
+          </div>
+          <%= f.email_field :email, class: 'form-control' %>
+        </div>
       </div>
-
-      <%= f.label :email, "メールアドレス" %>
-      <%= f.email_field :email, class: 'form-control' %>
-
-      <%= f.label :password, "パスワード" %>
-      <%= f.password_field :password, class: 'form-control' %>
-
-      <%= f.label :password_confirmation, "パスワード（確認）" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-
-      <%= f.submit "登録する", class: "btn btn-primary" %>
+      <div class="row">
+        <div class="form-gourp">
+          <div class="control-label">
+            <%= f.label :password, "パスワード" %>
+            <span class="required">※必須</span>
+          </div>
+          <%= f.password_field :password, class: 'form-control' %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="form-gourp">
+          <div class="control-label">
+            <%= f.label :password_confirmation, "パスワード（確認）" %>
+            <span class="required">※必須</span>
+          </div>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+      </div>
+      <div class="row">
+        <%= f.submit "登録する", class: "btn btn-primary" %>
+      </div>
     <% end %>
   </div>
 </div>
