--- a/app/assets/stylesheets/user_form.scss
+++ b/app/assets/stylesheets/user_form.scss
@@ -15,3 +15,9 @@
 .options-label {
   margin-bottom: 5px;
 }
+
+// .form-control {
+//   @media screen and (max-width: 767px) {
+//     height: 60px;
+//   }
+// }
