--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
         <div class="form-group">
           <%= f.label :name, "お名前/ニックネーム" %>
           <span class="required">※必須</span>
-          <%= f.text_field :name, class: 'form-control' %>
+          <%= f.text_field :name, class: 'form-control input-lg' %>
         </div>
       </div>
 
@@ -27,7 +27,7 @@
                   use_two_digit_numbers: true,
                   date_separator: '%s'
                 },
-                { class: 'form-control' }
+                { class: 'form-control input-lg' }
               ),
               '年 ', '月 ') + '日'
             %>
@@ -63,9 +63,9 @@
       </script>
 
       <div class="row">
-        <div class="form-gourp">
+        <div class="form-group">
           <%= f.fields_for :thumbnails do |thumbnail| %>
-            <%= thumbnail.file_field :image %>
+            <%= thumbnail.file_field :image, class: " input-lg" %>
           <% end %>
         </div>
       </div>
@@ -73,14 +73,14 @@
         <div class="form-group">
           <%= f.label :prefecture_id, "都道府県" %>
           <span class="required">※必須</span>
-          <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {selected: 12}, class: 'form-control' %>
+          <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {selected: 12}, class: 'form-control input-lg' %>
         </div>
       </div>
       <div class="row">
         <div class="form-group">
           <%= f.label :area_id, "市区町村" %>
           <span class="required">※必須</span>
-          <%= f.collection_select :area_id, Area.all, :id, :name, {selected: 176}, class: 'form-control' %>
+          <%= f.collection_select :area_id, Area.all, :id, :name, {selected: 176}, class: 'form-control input-lg' %>
         </div>
       </div>
 
@@ -90,7 +90,12 @@
             <%= f.label :hair_style, "現在の髪型" %>
           </div>
           <div class="radio-inline">
-            <%= f.radio_button :hair_style, "ベリーショート" %>ベリーショート
+            <span>
+              <%= f.radio_button :hair_style, "ベリーショート" %>
+            </span>
+            <span>
+              ベリーショート
+            </span>
           </div>
           <div class="radio-inline">
             <%= f.radio_button :hair_style, "ショート" %>ショート
@@ -157,7 +162,7 @@
             <%= f.label :email, "メールアドレス" %>
             <span class="required">※必須</span>
           </div>
-          <%= f.email_field :email, class: 'form-control' %>
+          <%= f.email_field :email, class: 'form-control input-lg' %>
         </div>
       </div>
       <div class="row">
@@ -166,7 +171,7 @@
             <%= f.label :password, "パスワード" %>
             <span class="required">※必須</span>
           </div>
-          <%= f.password_field :password, class: 'form-control' %>
+          <%= f.password_field :password, class: 'form-control input-lg' %>
         </div>
       </div>
       <div class="row">
@@ -175,11 +180,11 @@
             <%= f.label :password_confirmation, "パスワード（確認）" %>
             <span class="required">※必須</span>
           </div>
-          <%= f.password_field :password_confirmation, class: 'form-control' %>
+          <%= f.password_field :password_confirmation, class: 'form-control input-lg' %>
         </div>
       </div>
       <div class="row">
-        <%= f.submit "登録する", class: "btn btn-primary" %>
+        <%= f.submit "登録する", class: "btn btn-primary btn-lg" %>
       </div>
     <% end %>
   </div>
