--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,8 +7,9 @@
 
       <div class="row">
         <div class="form-group">
-          <%= f.label :name, "お名前" %>
-          <%= f.text_field :name, class: 'form-control' %>
+          <%= f.label :name, "お名前/ニックネーム" %>
+          <span class="required">※必須</span>
+          <%= f.text_field :name, class: 'form-control input-lg' %>
         </div>
       </div>
 
@@ -27,16 +28,33 @@
                   use_two_digit_numbers: true,
                   date_separator: '%s'
                 },
-                { class: 'form-control' }
+                { class: 'form-control input-lg' }
               ),
               '年 ', '月 ') + '日'
             %>
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="form-group">
+          <div class="control-label">
+            <%= f.label :sex, "性別" %>
+            <span class="required">※必須</span>
+          </div>
+          <div class="radio-inline">
+            <%= f.radio_button :sex, :female, id: "radio01" %>
+            <label for="radio01" class="radio">女性</label>
+          </div>
+          <div class="radio-inline">
+            <%= f.radio_button :sex, :male, id: "radio02" %>
+            <label for="radio02" class="radio">男性</label>
+          </div>
+
+        </div>
+
+      </div>
       <script>
         $(function() {
-          console.log("start");
           $('#user_prefecture_id').change(function() {
             var prefecture_id = $("#user_prefecture_id").val();
             if (prefecture_id !== "") {
@@ -51,40 +69,42 @@
 
       <div class="row">
         <div class="form-group">
+          <%= f.fields_for :thumbnails do |thumbnail| %>
+            <%= thumbnail.file_field :image, class: " input-lg" %>
+          <% end %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="form-group">
           <%= f.label :prefecture_id, "都道府県" %>
           <span class="required">※必須</span>
-          <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {}, class: 'form-control' %>
+          <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {}, class: 'form-control input-lg' %>
         </div>
       </div>
       <div class="row">
         <div class="form-group">
           <%= f.label :area_id, "市区町村" %>
           <span class="required">※必須</span>
-          <%= f.collection_select :area_id, Area.all, :id, :name, {}, class: 'form-control' %>
+          <%= f.collection_select :area_id, Area.all, :id, :name, {}, class: 'form-control input-lg' %>
         </div>
       </div>
 
       <% if @user.staff == false %>
         <div class="row">
-          <div class="form-gourp">
+          <div class="form-group">
             <div class="control-label">
               <%= f.label :hair_style, "現在の髪型" %>
             </div>
-            <div class="radio-inline">
-              <%= f.radio_button :hair_style, "ベリーショート" %>ベリーショート
-            </div>
-            <div class="radio-inline">
-              <%= f.radio_button :hair_style, "ショート" %>ショート
-            </div>
-            <div class="radio-inline">
-              <%= f.radio_button :hair_style, "ミディアム" %>ミディアム
-            </div>
-            <div class="radio-inline">
-              <%= f.radio_button :hair_style, "セミロング" %>セミロング
-            </div>
-            <div class="radio-inline">
-              <%= f.radio_button :hair_style, "ロング" %>ロング
-            </div>
+            <%= f.radio_button :hair_style, :very_short, id: "radio03-1" %>
+            <label for="radio03-1" class="radio">ベリーショート</label>
+            <%= f.radio_button :hair_style, :short, id: "radio03-2" %>
+            <label for="radio03-2" class="radio">ショート</label>
+            <%= f.radio_button :hair_style, :medium, id: "radio04" %>
+            <label for="radio04" class="radio">ミディアム</label>
+            <%= f.radio_button :hair_style, :semi_long, id: "radio05" %>
+            <label for="radio05" class="radio">セミロング</label>
+            <%= f.radio_button :hair_style, :long, id: "radio06" %>
+            <label for="radio06" class="radio">ロング</label>
           </div>
         </div>
         <div class="row">
@@ -92,31 +112,24 @@
             <div class="control-label">
               <%= f.label :hair_type, "髪質" %>
             </div>
-            <div class="radio-inline">
-              <%= f.radio_button :hair_type, "直毛" %>直毛
-            </div>
-            <div class="radio-inline">
-              <%= f.radio_button :hair_type, "ややクセ毛" %>ややクセ毛
-            </div>
-            <div class="radio-inline">
-              <%= f.radio_button :hair_type, "強いクセ毛" %>強いクセ毛
-            </div>
+            <%= f.radio_button :hair_type, :straight, id: "radio07" %>
+            <label for="radio07" class="radio">直毛</label>
+            <%= f.radio_button :hair_type, :rather_curly, id: "radio08" %>
+            <label for="radio08" class="radio">ややクセ毛</label>
+            <%= f.radio_button :hair_type, :strong_curly, id: "radio09" %>
+            <label for="radio09" class="radio">強いクセ毛</label>
           </div>
         </div>
 
-        <div>
+        <div class="row options-label">
           可能なオプション
         </div>
         <div class="row user-form-options">
           <div class="form-group">
-            <div class="col-md-6">
-              <%= f.label :color, "カラー可否" %>
-              <%= f.check_box(:color, {:checked=> false}, "可能", "不可能") %>
-            </div>
-            <div class="col-md-6">
-              <%= f.label :hair_extension, "エクステ可否" %>
-              <%= f.check_box(:hair_extension, {:checked=> false}, "可能", "不可能") %>
-            </div>
+            <%= f.check_box(:color, {id: "checkbox01"}) %>
+            <label for="checkbox01" class="checkbox">カラー</label>
+            <%= f.check_box(:hair_extension, {id: "checkbox02"}) %>
+            <label for="checkbox02" class="checkbox">エクステ</label>
           </div>
         </div>
         <div class="row">
@@ -124,43 +137,44 @@
             <div class="control-label">
               <%= f.label :reason, "理由" %>
             </div>
-            <div class="radio-inline">
-              <%= f.radio_button :reason, "単なる節約のため" %>単なる節約のため
-            </div>
-            <div class="radio-inline">
-              <%= f.radio_button :reason, "モデルを目指しているため" %>モデルを目指しているため
-            </div>
+            <%= f.radio_button :reason, :money, id: "radio10" %>
+            <label for="radio10" class="radio">単なる節約のため</label>
+            <%= f.radio_button :reason, :model, id: "radio11" %>
+            <label for="radio11" class="radio">モデルを目指しているため</label>
           </div>
-        </div>
-        <div class="">
-          <%= f.fields_for :thumbnails do |thumbnail| %>
-            <%= thumbnail.file_field :image %>
-            <%= thumbnail.hidden_field :image_cache %>
-          <% end %>
         </div>
       <% end %>
       <div class="row">
-        <div class="form-gourp">
-          <%= f.label :email, "メールアドレス" %>
-          <%= f.email_field :email, class: 'form-control' %>
+        <div class="form-group">
+          <div class="control-label">
+            <%= f.label :email, "メールアドレス" %>
+            <span class="required">※必須</span>
+          </div>
+          <%= f.email_field :email, class: 'form-control input-lg' %>
         </div>
       </div>
       <div class="row">
-        <div class="form-gourp">
-          <%= f.label :password, "パスワード" %>
-          <%= f.password_field :password, class: 'form-control' %>
+        <div class="form-group">
+          <div class="control-label">
+            <%= f.label :password, "パスワード" %>
+            <span class="required">※必須</span>
+          </div>
+          <%= f.password_field :password, class: 'form-control input-lg' %>
         </div>
       </div>
       <div class="row">
-        <div class="form-gourp">
-          <%= f.label :password_confirmation, "パスワード（確認）" %>
-          <%= f.password_field :password_confirmation, class: 'form-control' %>
+        <div class="form-group">
+          <div class="control-label">
+            <%= f.label :password_confirmation, "パスワード（確認）" %>
+            <span class="required">※必須</span>
+          </div>
+          <%= f.password_field :password_confirmation, class: 'form-control input-lg' %>
         </div>
       </div>
       <div class="row">
         <%= f.submit "変更する", class: "btn btn-primary" %>
       </div>
     <% end %>
-
+    
   </div>
 </div>
