--- a/app/views/users/staff_new.html.erb
+++ b/app/views/users/staff_new.html.erb
@@ -88,7 +88,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="form-gourp">
+        <div class="form-group">
           <div class="control-label">
             <%= f.label :password, "パスワード" %>
             <span class="required">※必須</span>
@@ -97,7 +97,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="form-gourp">
+        <div class="form-group">
           <div class="control-label">
             <%= f.label :password_confirmation, "パスワード（確認）" %>
             <span class="required">※必須</span>
