--- a/app/views/users/_search_form.html.erb
+++ b/app/views/users/_search_form.html.erb
@@ -52,17 +52,17 @@
           </div>
 
           <div class="row">
-            <div class="form-group col-md-3">
-              <%= label_tag :color, "カラー可否" %>
-              <%= check_box_tag(:color, "可能", checked = false, class: "") %>
+            <div class="form-group radio-inline">
+              <%= check_box_tag(:color, true, checked = false, class: "", id: "checkbox01") %>
+              <label for="checkbox01" class="checkbox">カラー</label>
             </div>
-            <div class="form-group col-md-3">
-              <%= label_tag :hair_extension, "エクステ可否" %>
-              <%= check_box_tag(:hair_extension, "可能", checked = false, class: "") %>
+            <div class="form-group radio-inline">
+              <%= check_box_tag(:hair_extension, true, checked = false, class: "", id: "checkbox02") %>
+              <label for="checkbox02" class="checkbox">エクステ</label>
             </div>
-            <div class="form-group col-md-3">
-              <%= label_tag :nail, "ネイル希望" %>
-              <%= check_box_tag(:nail, "希望", checked = false, class: "") %>
+            <div class="form-group radio-inline">
+              <%= check_box_tag(:nail, true, checked = false, class: "", id: "checkbox03") %>
+              <label for="checkbox03" class="checkbox">ネイル</label>
             </div>
             <div class="form-group col-md-3">
               <%= label_tag :reason, "理由" %>
