--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -41,11 +41,11 @@
             <span class="required">※必須</span>
           </div>
           <div class="radio-inline">
-            <%= f.radio_button :sex, :female, id: "radio01" %>
+            <%= f.radio_button :sex, "女性", id: "radio01" %>
             <label for="radio01" class="radio">女性</label>
           </div>
           <div class="radio-inline">
-            <%= f.radio_button :sex, :male, id: "radio02" %>
+            <%= f.radio_button :sex, "男性", id: "radio02" %>
             <label for="radio02" class="radio">男性</label>
           </div>
 
@@ -93,15 +93,15 @@
           <div class="control-label">
             <%= f.label :hair_style, "現在の髪型" %>
           </div>
-          <%= f.radio_button :hair_style, :very_short, id: "radio03-1" %>
+          <%= f.radio_button :hair_style, "ベリーショート", id: "radio03-1" %>
           <label for="radio03-1" class="radio">ベリーショート</label>
-          <%= f.radio_button :hair_style, :short, id: "radio03-2" %>
+          <%= f.radio_button :hair_style, "ショート", id: "radio03-2" %>
           <label for="radio03-2" class="radio">ショート</label>
-          <%= f.radio_button :hair_style, :medium, id: "radio04" %>
+          <%= f.radio_button :hair_style, "ミディアム", id: "radio04" %>
           <label for="radio04" class="radio">ミディアム</label>
-          <%= f.radio_button :hair_style, :semi_long, id: "radio05" %>
+          <%= f.radio_button :hair_style, "セミロング", id: "radio05" %>
           <label for="radio05" class="radio">セミロング</label>
-          <%= f.radio_button :hair_style, :long, id: "radio06" %>
+          <%= f.radio_button :hair_style, "ロング", id: "radio06" %>
           <label for="radio06" class="radio">ロング</label>
         </div>
       </div>
@@ -110,11 +110,11 @@
           <div class="control-label">
             <%= f.label :hair_type, "髪質" %>
           </div>
-          <%= f.radio_button :hair_type, :straight, id: "radio07" %>
+          <%= f.radio_button :hair_type, "直毛", id: "radio07" %>
           <label for="radio07" class="radio">直毛</label>
-          <%= f.radio_button :hair_type, :rather_curly, id: "radio08" %>
+          <%= f.radio_button :hair_type, "ややクセ毛", id: "radio08" %>
           <label for="radio08" class="radio">ややクセ毛</label>
-          <%= f.radio_button :hair_type, :strong_curly, id: "radio09" %>
+          <%= f.radio_button :hair_type, "強いクセ毛", id: "radio09" %>
           <label for="radio09" class="radio">強いクセ毛</label>
         </div>
       </div>
@@ -124,9 +124,9 @@
       </div>
       <div class="row user-form-options">
         <div class="form-group">
-          <%= f.check_box(:color, {:checked=> false, id: "checkbox01"}) %>
-          <label for="checkbox01" class="checkbox">カラー</label>
-          <%= f.check_box(:hair_extension, {:checked=> false, id: "checkbox02"}) %>
+          <%= f.check_box(:color, {id: "checkbox1"}) %>
+          <label for="checkbox1" class="checkbox">カラー</label>
+          <%= f.check_box(:hair_extension, {id: "checkbox02"}) %>
           <label for="checkbox02" class="checkbox">エクステ</label>
         </div>
       </div>
@@ -135,9 +135,9 @@
           <div class="control-label">
             <%= f.label :reason, "理由" %>
           </div>
-          <%= f.radio_button :reason, :money, id: "radio10" %>
-          <label for="radio10" class="radio">単なる節約のため</label>
-          <%= f.radio_button :reason, :model, id: "radio11" %>
+          <%= f.radio_button :reason, "節約のため", id: "radio10" %>
+          <label for="radio10" class="radio">節約のため</label>
+          <%= f.radio_button :reason, "モデルを目指しているため", id: "radio11" %>
           <label for="radio11" class="radio">モデルを目指しているため</label>
         </div>
       </div>
