--- a/app/assets/stylesheets/user_form.scss
+++ b/app/assets/stylesheets/user_form.scss
@@ -40,11 +40,12 @@ input[type=radio], input[type=checkbox] {
   background-color: #f6f7f8;
   vertical-align: middle;
   cursor: pointer;
-
-  &:hover {
-    background-color: #e2edd7;
-    &:after {
-      border-color: $iconColor;
+  @media screen and (min-width: 767px) {
+    &:hover {
+      background-color: #e2edd7;
+      &:after {
+        border-color: $iconColor;
+      }
     }
   }
 
