--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,6 +52,7 @@
     <section class="stats">
       <%= render 'shared/stats' %>
     </section>
+    <%= render 'follow_form' if logged_in? %>
 
     <% if !current_user?(@user) && logged_in? && ((@user.staff == false && current_user.staff == true) || (current_user.staff == false && @user.staff == true))  %>
       <section class="message_box">
@@ -70,6 +71,7 @@
        <%= render 'messages/message_form',
          {from_user: current_user, to_user: @user, room_id: @room_id} %>
       </div>
+      
     <% end %>
 
 
