--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -10,7 +10,7 @@
 /* universal */
 
 body {
-  padding-top: 50px;
+  // padding-top: 50px;
 }
 
 section {
@@ -57,22 +57,6 @@ p {
 }
 
 /* header */
-
-#logo {
-  float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
-  color: #fff;
-  // text-transform: uppercase;
-  letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
-}
-
-#logo:hover {
-  color: #fff;
-  text-decoration: none;
-}
 
 
 /* footer */
@@ -321,11 +305,6 @@ div.message_form {
 
 // Add
 
-.navbar-inverse {
-  background-color: gray;
-  border-color: gray;
-}
-
 .user-info {
   text-align: center;
 }
@@ -343,20 +322,8 @@ div.message_form {
 
 body {
   font-size: 18px;
-  padding-top: 100px;
-}
-header {
-  height: 100px;
 }
 
 .alert {
   margin-bottom: 0;
-}
-
-.navbar-collapse {
-  background-color: gray;
-}
-
-.navbar-inverse .navbar-nav > li > a {
-  color: white;
 }
