--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,39 +1,40 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header>
+  <%= link_to "Hairiah", root_path, id: "logo" %>
+  <div class="hamburger-open-btn">
+    <i class="fa fa-chevron-down"></i>
+  </div>
+  <div class="hamburger-close-btn">
+    <i class="fa fa-chevron-up"></i>
+  </div>
+  <div  class="header-items">
+    <div class="header-item"><%= link_to "モデル募集掲示板", microposts_path %></div>
+    <% if logged_in? %>
+      <div class="header-item"><%= link_to "美容師を探す", staffs_path %></div>
+      <div class="header-item"><%= link_to "カットモデルを探す", users_path %></div>
+      <div class="header-item"><%= link_to "マイページへ", current_user %></div>
+      <div class="header-item"><%= link_to "個人設定", edit_user_path(current_user) %></div>
+      <div class="header-item"><%= link_to "ログアウト", logout_path, method: :delete %></div>
+    <% else %>
+      <div class="header-item"><%= link_to "モデル会員登録", signup_path %></div>
+      <div class="header-item"><%= link_to "美容師会員登録", staff_signup_path %></div>
+      <div class="header-item"><%= link_to "ログイン", login_path %></div>
+    <% end %>
+  </div>
+  <div class="hamburger-menu">
 
-    <!-- 追記ここから-->
-    <div class="navbar-header">
-
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <!-- 追記ここまで-->
-
-      <%= link_to "Hairiah", root_path, id: "logo" %>
-
-    <!-- 追記ここから-->
+      <div class="header-item-hm"><%= link_to "モデル募集掲示板", microposts_path %></div>
+      <% if logged_in? %>
+        <div class="header-item-hm"><%= link_to "美容師を探す", staffs_path %></div>
+        <div class="header-item-hm"><%= link_to "カットモデルを探す", users_path %></div>
+        <div class="header-item-hm"><%= link_to "マイページへ", current_user %></div>
+        <div class="header-item-hm"><%= link_to "個人設定", edit_user_path(current_user) %></div>
+        <div class="header-item-hm"><%= link_to "ログアウト", logout_path, method: :delete %></div>
+      <% else %>
+        <div class="header-item-hm"><%= link_to "モデル会員登録", signup_path %></div>
+        <div class="header-item-hm"><%= link_to "美容師会員登録", staff_signup_path %></div>
+        <div class="header-item-hm"><%= link_to "ログイン", login_path %></div>
+      <% end %>
     </div>
-    <!-- 追記ここまで-->
 
-    <nav>
-      <!-- ulタグ内に「id="navbar"」を追記、classに「navbar-collapse collapse」を追記 -->
-      <ul id="navbar" class="nav navbar-nav navbar-right navbar-collapse collapse">
-        <li><%= link_to "ホーム", root_path %></li>
-        <li><%= link_to "モデル募集掲示板", microposts_path %></li>
-        <% if logged_in? %>
-          <li><%= link_to "美容師を探す", staffs_path %></li>
-          <li><%= link_to "カットモデルを探す", users_path %></li>
-          <li><%= link_to "マイページへ", current_user %></li>
-          <li><%= link_to "個人設定", edit_user_path(current_user) %></li>
-          <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
-        <% else %>
-          <li><%= link_to "モデル会員登録", signup_path %></li>
-          <li><%= link_to "美容師会員登録", staff_signup_path %></li>
-          <li><%= link_to "ログイン", login_path %></li>
-        <% end %>
-      </ul>
-    </nav>
-
+  </div>
 </header>
